yaapp/media/css/webapp.css
/* ... */
#webapp-radio-title {
	overflow:hidden;
    margin-left:5px;
}

#webapp-radio p {
    font-size: 10px;
    font-weight: 200;
    line-height: 27px;
}

#webapp-radio-picture {
    position:relative;
    width: 212px;
    margin: 0px auto;
}

#webapp-radio-users li {
    background-color: white;
}

#webapp-radio-users img {
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    border: 1px solid #c1c1c1;
    overflow: hidden;
}

#webapp-user-picture {
    width: 212px;
    height: 212px;
    margin: 0px auto;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    overflow: hidden;
    border: 2px solid #c1c1c1;
}

#webapp-radio-title {
    text-align: center;
}

#webapp-radio-title h1 {
    font-size: 16px;
}

#webapp-wall-input {
    margin-top: 24px;
}

.favorites-nbr-container {
    text-align:left;
    margin: 10px 0px;
}

.favorites-nbr {
    margin-right:5px;
    vertical-align: middle;
    font-size: 30px;
    color:#434343;
    font-weight: bold;
}

.favorites-nbr-container .favorites-txt {
    float:right;
    color:#999999;
    margin-top:9px;
    text-shadow:1px 1px white;
    font-weight: bold;
    font-size:13px;
}

#btn-favorite {
    display:block;
    position:relative;
    width:209px;
    height:41px;
    background-image:url('../app/images/common/btn-bg-42.png');
    border:1px solid #cbcdc9;
    box-shadow:0px 2px 2px #cbcdc9;
    margin:0px;
    padding:0px;
    vertical-align:middle;
    color:#58595C;
    font-weight:bold;
    text-shadow:1px 1px white;
}

#btn-favorite img {
    position:absolute;
    left:10px;
    top:11px;
}

#btn-favorite span {
    display:block;
    margin-top:12px;
    margin-left:25px;
    font-size:15px;
}

#btn-favorite:hover {
    width:209px;
    height:41px;
    background-image:url('../app/images/common/btn-bg-42.png');
    border:1px solid #cbcdc9;
    box-shadow:0px 2px 2px #cbcdc9;
    margin:0px;
    padding:0px;
}

#btn-unfavorite {
    display:block;
    position:relative;
    width:209px;
    height:41px;
    background-image:url('../app/images/common/btn-bg-42.png');
    border:1px solid #cbcdc9;
    box-shadow:0px 2px 2px #cbcdc9;
    margin:0px;
    padding:0px;
    vertical-align:middle;
    color:#58595C;
    font-weight:bold;
    text-shadow:1px 1px white;
}

#btn-unfavorite img {
    left:10px;
    top:11px;
    position:absolute;
}

#btn-unfavorite span {
    display:block;
    margin-top:12px;
    margin-left:25px;
    font-size:15px;
}

#btn-unfavorite:hover {
    width:209px;
    height:41px;
    background-image:url('../app/images/common/btn-bg-42.png');
    border:1px solid #cbcdc9;
    box-shadow:0px 2px 2px #cbcdc9;
    margin:0px;
    padding:0px;
}

#wall {
    list-style: none;
    margin-left: 0;
}

.wall-event-message {
    position:relative;
    border-bottom: 1px solid #eeeeee;
    margin-bottom: 12px;
}

.wall-event-message img.user {
    margin-top: 8px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    overflow: hidden;
    border: 1px solid #c1c1c1;
}

.wall-event-message img {
    margin: 36px;
    float:left;
}

.wall-event-message .date, .wall-event-message p {
	color:#97989b;
	text-shadow:1px 1px white;
}

.wall-event-message .date,
.wall-event-message h2 {
    display:block;
    line-height: 17px;
    height: 17px;
    margin-right:5px;
}

.like-comment {
    margin-left:34px;
    margin-top:10px;
}

.like-comment img {
    display:block;
    float:left;
}

.like-comment h2 {
    display:block;
    float:left;
    margin-left:35px;
}

.like-comment p {
    float:left;
    clear:both;
    margin-left:67px;
}

.song-comment {
    margin-left:34px;
    margin-top:10px;
}

.song-comment img {
    display:block;
    float:left;
}

.song-comment h2 {
    display:block;
    float:left;
    margin-left:35px;
}

.wall-event-message .date-like {
    color:#97989B;
    display:block;
    float:left;
    margin:0px;
}

#webapp-track-container {
    height:210px;
    width:210px;
    position:relative;
    margin:25px 22px 20px 45px;
}

#webapp-track-picture {
    position:absolute;
    height:210px;
    width:210px;
}

#webapp-track-title {
    width:208px;
    position:absolute;w
    border:1px solid black;
    background-color: rgba(39, 37, 36, 0.80);
    bottom:0px;
    left:0px;
    border-radius:0px 0px 5px 5px;
    box-shadow:0px 1px 1px grey inset;
}

#webapp-title-radio {
    width:208px;
    position:absolute;
    border:1px solid black;
    background-color: rgba(39, 37, 36, 0.80);
    bottom:4px;
    left:5px;
    border-radius:0px 0px 5px 5px;
    box-shadow:0px 1px 1px grey inset;
}

#webapp-title-radio h2 {
    font-size: 15px;
    font-weight: normal;
    color: white;
    line-height: 20px;
    margin: 5px;
}

#webapp-track-title h2 {
    font-size:15px;
    font-weight:normal;
    color:white;
    line-height:20px;
    margin:5px;
}
.wall-event-remove button {
    float:right;
    margin-right:5px;
    margin-top:12px;
    margin-bottom:5px;
    display:none;
}

.wall-event:hover .wall-event-remove button  {
    display:block;
}

.wall-delete {
    display:none;
}

/**
 * User cell
 */

ul .user-cell {
    list-style: none;
    height: 146px;
    width: 146px;
    float: left;
    margin-right: 20px;
    cursor: pointer;
    margin-bottom: 12px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    border: 8px solid white;
	box-shadow: 0px 2px 8px #e6e6e6;
    overflow: hidden;
}

ul .user-cell:hover {
	border:8px solid #5aabda;
	-webkit-transition: border 0.6s ease;
    -moz-transition: border 0.6s ease;
    -ms-transition: border 0.6s ease;
    -o-transition: border 0.6s ease;
    transition: border 0.6s ease;
}

ul .mask-user {
	position:absolute;
	height:146px;
	width:146px;
	border-radius:50%;
	background-color: rgba(0,0,0,0.8);
	text-align:center;
}
/* ... */

